# computer_graphics_swsu

./: README.md
lb1/ImgConverter/: main.cpp
lb1/ImgLib/: bmp_image.cpp  bmp_image.h
lb10/: README.md  main.cpp
lb11/: CMakeLists.txt  README.md  main.cpp
lb12/: README.md  app  main.cpp
lb13/: README.md  clipping_fill  main.cpp
lb14/: README.md  lab2  main.cpp
lb15/: README.md  lab15  main.cpp
lb16/: README.md  lab16  main.cpp  obj_viewer  obj_viewer.cpp  object_with_materials_20251228_120821.mtl
lb2/: CMakeLists.txt  README.md  main.cpp
lb3/: CMakeLists.txt  README.md  bresenham_algorithm.cpp  bresenham_algorithm.h  bresenham_algorithm_int.cpp  bresenham_algorithm_int.h  cda.cpp  cda.h  cimg_algorithm.cpp  cimg_algorithm.h  main.cpp  svgprocessor_utils.cpp  svgprocessor_utils.h
lb4/: CMakeLists.txt  README.md  bresenham_algorithm.cpp  bresenham_algorithm.h  cimg_algorithm.cpp  cimg_algorithm.h  equation_algorithm.cpp  equation_algorithm.h  main.cpp  param_equation_algorithm.cpp  param_equation_algorithm.h  svgprocessor_utils.cpp  svgprocessor_utils.h
lb5/: CMakeLists.txt  README.md  main.cpp
lb6/: CMakeLists.txt  main.cpp
lb7/: main.cpp
lb8/: README.md  main.cpp
lb9/: REAME.md  main.cpp
